# gurobirs

./: Cargo.toml  README.md
src/: attributes.rs  callback.rs  constr.rs  env.rs  error.rs  lib.rs  model.rs  parameters.rs  prelude.rs  var.rs
src/builder/: mod.rs  var.rs
src/expr/: lin_expr.rs  mod.rs
src/modeling/: mod.rs
src/modeling/builder/: mod.rs  var.rs
src/modeling/expr/: lin_expr.rs  mod.rs  nonlin_expr.rs  quad_expr.rs
tests/: build_model.rs  facility.rs  mip1.rs  qcp.rs
